--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
     }
   ],
   "require": {
-    "php": ">=8.1"
+    "php": ">=8.1",
+    "baks-dev/yandex-market": "^7.1"
   },
   "require-dev": {
     "roave/security-advisories": "dev-latest",
