--- a/Resources/systemd/baks-yandex-market-products@.service
+++ b/Resources/systemd/baks-yandex-market-products@.service
@@ -10,7 +10,7 @@
 # systemctl stop baks-yandex-market-products@1.service
 
 [Unit]
-Description=Symfony messenger yandex-market-products %i
+Description=yandex-market-products
 StartLimitBurst=5
 StartLimitIntervalSec=0
 
